--- a/resources/less/sections/header.less
+++ b/resources/less/sections/header.less
@@ -47,7 +47,7 @@ header {
 	}
 
 	.searchResults-enter-active, .searchResults-leave-active { transition: all .3s ease; }
-	.searchResults-enter, .searchResults-leave-to { transform: translateY(100vh); }
+	.searchResults-enter, .searchResults-leave-to { transform: translateY(20vh); opacity: 0; }
 
 	@media (max-width: 1180px) {
 		.desktop { display: none; }
