--- a/resources/less/home.less
+++ b/resources/less/home.less
@@ -3,8 +3,8 @@
 @import "snippets/default.less";
 @import "sections/header.less";
 
-
 @import "snippets/slick.less";
+
 .welcome {
 	position: relative;
 	-moz-user-select: none;
@@ -74,3 +74,6 @@
 		height: calc(100vh - 82px - 50px - 50px);
 	}
 }
+
+
+@import "sections/footer.less";
