--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -1,6 +1,6 @@
 .desktop {
 	width: 100%;
-	max-width: 1400px;
+	max-width: @max-screen-width;
 	padding: 20px 10px;
 	margin: auto;
 	padding-bottom: 7px;
