--- a/resources/less/snippets/search.less
+++ b/resources/less/snippets/search.less
@@ -173,4 +173,16 @@
 			}
 		}
 	}
+	.show-all-results-line {
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: 55px;
+		background-color: @main-color;
+		opacity: .65;
+		color: white;
+		display: flex;
+		align-items: center;
+	}
 }
