--- a/resources/less/snippets/navbar.desktop.less
+++ b/resources/less/snippets/navbar.desktop.less
@@ -1,6 +1,6 @@
 .desktop {
 	width: 100%;
-	max-width: 1400px;
+	max-width: @max-screen-width;
 	margin: auto;
 	display: grid;
 	grid-template-columns: 1fr minmax(0, 409px);
