--- a/resources/less/snippets/navbar.mobile.less
+++ b/resources/less/snippets/navbar.mobile.less
@@ -25,7 +25,7 @@
 			color: white;
 			height: 56px;
 			width: 56px;
-			font-size: 3rem;
+			font-size: 2rem;
 			transform: rotate(45deg);
 			display: flex;
 			align-items: center;
@@ -71,6 +71,7 @@
 						}
 						.phone-number {
 							font-size: 1.1rem;
+							color: white;
 						}
 					}
 					.description {
