Robots.exe and badbrowser page

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -12,6 +12,7 @@
 
 @import "templates/home.less";
 
+@import "templates/badbrowser.less";
 @import "templates/error.401.less";
 @import "templates/error.404.less";
 @import "templates/error.500.less";
