Mobile search and first steps of product page

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -11,6 +11,7 @@
 @import "sections/search.less";
 
 @import "templates/home.less";
+@import "templates/shop.product.less";
 
 @import "templates/badbrowser.less";
 @import "templates/error.401.less";
