--- a/resources/less/snippets/header.mobile.less
+++ b/resources/less/snippets/header.mobile.less
@@ -76,8 +76,9 @@
 	width: 100%;
 	position: fixed;
 	left: 0;
+	right: 0;
 	top: 0;
-	bottom: 0;
+	height: 100vh;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
@@ -85,12 +86,9 @@
 
 	.overlay {
 		position: fixed;
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
+		.absolutely-covered;
 		background-color: rgba(0,0,0,.75);
-		z-index: -1;
+		z-index: 0;
 
 		svg {
 			position: absolute;
@@ -108,6 +106,7 @@
 		overflow: auto;
 		z-index: 2;
 		background-color: #161616;
+		position: relative;
 
 		.top {
 			padding: 19px 25px;
