--- a/resources/less/templates/shop.product.less
+++ b/resources/less/templates/shop.product.less
@@ -19,21 +19,60 @@
 			}
 		}
 		.text {
-			.vendor {
+			& > .vendor {
 				text-transform: uppercase;
-				font-size: 1.1rem;
-				margin-bottom: 8px;
+				font-size: 2rem;
+				letter-spacing: 0.1rem;
+				font-weight: 500;
 			}
 			h2 {
-				font-weight: 500;
-				font-size: 1.4rem;
-				color: fade(black, 80%);
+				font-weight: 400;
+				font-size: 1.6rem;
+				color: rgba(0, 0, 0, 0.8);
 			}
-			.price {
+			.info {
+				display: flex;
+				align-items: center;
+				color: #9d9d9d;
+				margin-top: 20px;
+
+				.in-stock {
+					background-color: #41d651;
+					color: white;
+					padding: 3px 10px;
+					margin-left: 20px;
+					border-radius: 3px;
+				}
+			}
+			.price-wrapper {
+				display: flex;
+				align-items: center;
 				margin-top: 15px;
-				font-weight: 500;
-				color: #6114d4;
-				font-size: 1.4rem;
+				font-size: 2.5rem;
+
+				.price {
+					font-weight: 500;
+					color: black;
+				}
+				.compare-at-price {
+					font-weight: 500;
+					margin-left: 20px;
+					color: #949597;
+					position: relative;
+
+					.strike {
+						position: absolute;
+						left: 0;
+						right: 0;
+						height: 2px;
+						background-color: #949597;
+						top: 22px;
+					}
+				}
+				.rub {
+					font-size: 2.4rem;
+					margin-left: 5px;
+				}
 			}
 			.parameter-list {
 				margin-top: 40px;
